<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">my_task</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_test">title name</string>
    
    <string name="quick">快捷</string>
    <string name="complete">完成</string>
    <string name="task_name">任务名称</string>
    <string name="task_startday">开始日期</string>
    <string name="task_endday">结束日期</string>
    <string name="task_content">内容描述</string>
    <string name="reason_for_delay">延迟原因</string>
    <string name="task_needs">所需物品</string>
    <string name="task_day_hist">历史</string>
    <string name="task_day_plan">计划</string>
    
    <string name="taskDetailInfo">以下为任务详细信息</string>
    
    <string name="today">今天</string>
    <string name="day1after">一天后</string>
    <string name="day2after">两天后</string>
    <string name="day3after">三天后</string>
    <string name="day4after">四天后</string>
    <string name="day5after">五天后</string>
    <string name="day6after">六天后</string>
    
    <string name="startdate">开始日期</string>
    <string name="enddate">截止日期</string>
    <string name="donedate">完成日期</string>

    <string name="hist">历史</string>
</resources>
