<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:focusable="true"
	android:focusableInTouchMode="true">
    
    <View android:layout_width="10dp" android:layout_height="match_parent" android:background="@color/titlebar_bg"/>
    
    <RelativeLayout
        android:id="@id/task_plan_edit_titlebar"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView android:id="@id/task_plan_edit_task_name"
		    android:layout_width="match_parent"
		    android:layout_height="30dp"
		    android:background="@null"
		    android:hint="@string/task_name"
		    android:layout_margin="10dp"
		    android:gravity="center"/>
        
    </RelativeLayout>
    
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/task_plan_edit_titlebar">

		<LinearLayout
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	       	android:layout_marginStart="8dp"
	       	android:orientation="vertical" >
	       	<View android:layout_width="match_parent" android:layout_height="5dp" android:background="@color/titlebar_bg"/>
		   
			<EditText android:id="@id/task_plan_edit_plan_after0"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:hint="@string/today"
			    android:minLines="4"
			    android:maxLines="20"
			    android:gravity="top"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<EditText android:id="@id/task_plan_edit_plan_after1"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:hint="@string/day1after"
			    android:minLines="4"
			    android:maxLines="20"
			    android:gravity="top"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<EditText android:id="@id/task_plan_edit_plan_after2"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:hint="@string/day2after"
			    android:minLines="4"
			    android:maxLines="20"
			    android:gravity="top"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<EditText android:id="@id/task_plan_edit_plan_after3"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:hint="@string/day3after"
			    android:minLines="4"
			    android:maxLines="20"
			    android:gravity="top"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<EditText android:id="@id/task_plan_edit_plan_after4"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:hint="@string/day4after"
			    android:minLines="4"
			    android:maxLines="20"
			    android:gravity="top"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<EditText android:id="@id/task_plan_edit_plan_after5"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:hint="@string/day5after"
			    android:minLines="4"
			    android:maxLines="20"
			    android:gravity="top"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<EditText android:id="@id/task_plan_edit_plan_after6"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:hint="@string/day6after"
			    android:minLines="4"
			    android:maxLines="20"
			    android:gravity="top"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<Button android:id="@id/task_plan_edit_save"
			    android:layout_width="match_parent"
			    android:layout_height="50dp"
			    android:gravity="center"
			    android:background="@null"
			    android:text="@string/complete"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
		</LinearLayout>
		
	</ScrollView>
</RelativeLayout>
