<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:orientation="horizontal"
	    android:background="@color/titlebar_bg">
	    
	    <Button android:id="@id/task_add_quick"
	        android:layout_width="60dp"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:text="@string/quick"/>
	    
	    <TextView android:id="@id/task_add_title"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:textSize="18sp"
	        android:text="@string/title_test"/>
	    
	    <Button android:id="@id/task_add_complete"
	        android:layout_width="60dp"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:text="@string/complete"/>"
	    
	</LinearLayout>
    
    
</LinearLayout>
