<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:focusable="true"
	android:focusableInTouchMode="true">
    
    <View android:layout_width="10dp" android:layout_height="match_parent" android:background="@color/titlebar_bg"/>
    
    <RelativeLayout
        android:id="@id/day_task_edit_titlebar"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button android:id="@id/day_task_edit_task_done"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/complete"
	        android:layout_marginStart="10dp"
	        android:gravity="center"/>
        
        <TextView android:id="@id/day_task_edit_task_name"
		    android:layout_width="match_parent"
		    android:layout_height="30dp"
		    android:background="@null"
		    android:hint="@string/task_name"
		    android:layout_margin="10dp"
		    android:gravity="center"/>
        
        <Button android:id="@id/day_task_edit_per_task_hist"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/task_day_hist"
	        android:layout_toStartOf="@id/day_task_edit_task_plan"
	        android:gravity="center"/>
        
        <Button android:id="@id/day_task_edit_task_plan"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/task_day_plan"
	        android:gravity="center"
	        android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/day_task_edit_titlebar">

		<LinearLayout
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	       	android:layout_marginStart="8dp"
	       	android:orientation="vertical" >
	       	<View android:layout_width="match_parent" android:layout_height="5dp" android:background="@color/titlebar_bg"/>
		   
			<EditText android:id="@id/day_task_edit_task_daycontent"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:hint="@string/task_content"
			    android:minLines="4"
			    android:maxLines="20"
			    android:gravity="top"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<TextView android:id="@id/day_task_edit_task_plan" 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="3dp"
			    android:layout_marginStart="5dp"
			    android:minLines="3"
			    android:textSize="13sp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<Button android:id="@id/day_task_edit_complete"
			    android:layout_width="match_parent"
			    android:layout_height="50dp"
			    android:gravity="center"
			    android:background="@null"
			    android:text="@string/complete"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
		
			<TextView android:layout_width="match_parent"
			    android:layout_height="30dp"
			    android:text="@string/taskDetailInfo"
			    android:gravity="center_vertical"
			    android:layout_marginTop="3dp"
			    android:layout_marginStart="5dp"
			    android:textSize="13sp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<TextView android:id="@id/day_task_edit_task_startday"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<TextView android:id="@id/day_task_edit_task_content"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
		    <TextView android:id="@id/day_task_edit_task_needs"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<TextView android:id="@id/day_task_edit_task_endday"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<EditText android:id="@id/day_task_edit_delay_reason"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@null"
			    android:hint="@string/reason_for_delay"
			    android:minLines="2"
			    android:maxLines="20"
			    android:gravity="top"
			    android:visibility="gone"
			    android:layout_margin="10dp"/>
			<View android:layout_width="match_parent" android:layout_height="2dp" android:background="@color/titlebar_bg"/>
			
			<Button android:id="@id/day_task_edit_delay_oneday"
			    android:layout_width="match_parent"
			    android:layout_height="50dp"
			    android:gravity="center"
			    android:visibility="gone"
			    android:text="@string/complete"/>
		</LinearLayout>
		
	</ScrollView>
</RelativeLayout>
